--- a/src/App.css
+++ b/src/App.css
@@ -52,14 +52,14 @@ img {
 }
 
 .App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+  max-width: 400px;
+  margin: 0 auto;
+  border: 1px solid #0C0B0B;
+  background-color: #0C0B0B;
+  padding: 16px;
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  text-align: center;
 }
 
 .App-link {
