--- a/src/App.css
+++ b/src/App.css
@@ -14,11 +14,14 @@ body {
   
 }
 .card { 
-  border-style: solid;
-  border-width: 3px;
-  border-color: green;
-  border-radius: 10px;
-  width: 450px;
+  max-width: 400px;
+  margin: 0 auto;
+  border: 1px solid #0C0B0B;
+  background-color: #0C0B0B;
+  padding: 16px;
+  display: flex;
+  flex-direction: column;
+  text-align: center;
 }
 img {
   margin: 25px;
@@ -52,14 +55,14 @@ img {
 }
 
 .App-header {
-  max-width: 400px;
-  margin: 0 auto;
-  border: 1px solid #0C0B0B;
-  background-color: #0C0B0B;
-  padding: 16px;
+  background-color: #282c34;
+  min-height: 100vh;
   display: flex;
   flex-direction: column;
-  text-align: center;
+  align-items: center;
+  justify-content: center;
+  font-size: calc(10px + 2vmin);
+  color: white;
 }
 
 .App-link {
