--- a/src/App.css
+++ b/src/App.css
@@ -13,6 +13,20 @@ body {
   background-color: lightgreen;
   
 }
+h3 {
+  margin: 40px 0 0;
+}
+ul {
+  list-style-type: none;
+  padding: 0;
+}
+li {
+  display: inline-block;
+  margin: 0 10px;
+}
+a {
+  color: #42b983;
+}
 .card { 
   max-width: 400px;
   margin: 0 auto;
@@ -22,6 +36,41 @@ body {
   display: flex;
   flex-direction: column;
   text-align: center;
+}
+.card img {
+  max-width: 100%;
+  height: auto;
+}
+
+.card-content {
+  flex: 1;
+}
+
+/* Style for the Title label */
+h2 {
+  font-size: 24px;
+  margin: -10px 0;
+  /* Background color and border */
+  background-color: #F8471B;
+  /* Background color */
+  color: #fff;
+  /* Text color on the background */
+  padding: 8px 16px;
+  border-radius: 4px;
+}
+
+p {
+  font-size: 16px;
+  margin: 8px 0;
+  color: #fff;
+}
+
+a.details-button {
+  background-color: #EA5F0A;
+  color: #fff;
+  padding: 8px 16px;
+  text-decoration: none;
+  border-radius: 4px;
 }
 img {
   margin: 25px;
