--- a/src/App.css
+++ b/src/App.css
@@ -9,10 +9,10 @@
 .color {
   background-color: red;
 }
-body {
+/*body {
   background-color: lightgreen;
-  
-}
+
+}*/
 h3 {
   margin: 40px 0 0;
 }
